# EngagementEstimator

./: .gitignore  .gitmodules  CMakeLists.txt  Controls.qml  EngagementEstimator_ru_RU.ts  InvolvementEstimator.pro  README.md  ScreenAreaSelector.qml  Style.qml  converter_mtcnn.py  debuginfodrawer.cpp  debuginfodrawer.h  enetb08bestafewwrapper.cpp  facedetectionwrapper.cpp  facedetectionwrapper.h  facetracker.cpp  facetracker.h  involvementestimator.cpp  involvementestimator.h  main.cpp  main.qml  modelexecutor.cpp  modelexecutor.h  mtcnnwrapper.cpp  mtcnnwrapper.h  ocrwrapper.cpp  qml.qrc  resultinfo.h  screencapture.cpp  screencapture.h
cmake/: FindTesseract.cmake
include/: debuginfodrawer.h  enetb08bestafewwrapper.h  engagement_estimator.h  engagementestimator.h  face_tracker.h  facedetector.h  faceid.h  facetracker.h  involvementestimator.h  model_executor.h  modelexecutor.h  ocrwrapper.h  result_info.h  resultinfo.h  sliding_window.h
include/model_wrappers/: emotion_classifier.h  engagement_classifier.h  face_id.h  features_extractor.h  model_wrapper_interface.h  mtcnn_wrapper.h
include/ui/: debug_info_drawer.h
models/: converter.py  converter_mtcnn.py  converter_state_vggface2_enet0_new.py  evaluate_onnx.py  evaluate_perf.py  evaluate_pytorch.py  prepare_eng_emo_models.py  split_mtcnn.py  tune_enet_b0_8_best_afew.py  tune_state_vggface2_enet0_new.py
qml/: Config.qml  Controls.qml  ScreenAreaSelector.qml  Style.qml  main.qml  qml.qrc  qmldir
research/: 01-Features-extractor.ipynb  02 - Engagement user-independent model training.ipynb  03 - Custom dataset features extractor.ipynb  Custom dataset features extractor.ipynb
src/: debuginfodrawer.cpp  enetb08bestafewwrapper.cpp  engagement_estimator.cpp  engagementestimator.cpp  face_tracker.cpp  facedetector.cpp  faceid.cpp  facetracker.cpp  involvementestimator.cpp  model_executor.cpp  mtcnnwrapper.cpp  ocrwrapper.cpp  screencapture.cpp  sliding_window.cpp
src/model_wrappers/: emotion_classifier.cpp  engagement_classifier.cpp  face_id.cpp  features_extractor.cpp  model_wrapper_interface.cpp  mtcnn_wrapper.cpp
src/ui/: debug_info_drawer.cpp  screen_capture.cpp
